Fix overlow and max-width for too long css selectors

--- a/Lizard/lizardDB/rules.css
+++ b/Lizard/lizardDB/rules.css
@@ -19,7 +19,7 @@
 	font-family: Tahoma, Verdana, Segoe, sans-serif;
 }
 
-body { min-width: 600px; }
+body { min-width: 850px; }
 
 
 #experimentalWarningBar {
@@ -65,6 +65,7 @@ ol {
 }
 ol > li {
 	padding: 2px 0;
+	overflow-wrap: break-word;
 	cursor: pointer;
 }
 ol > li.selected {
@@ -172,6 +173,7 @@ ol > li::marker {
 }
 #urlRuleContainer > div:not(#verticalBarDelimiter) {
 	flex-basis: 46%;
+	max-width: 60%;
 }
 
 #verticalBarDelimiter {
